--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-browser-dynamic": "^2.4.0",
     "@angular/router": "^3.4.0",
     "core-js": "^2.4.1",
+    "express": "^4.15.2",
     "jquery": "^3.1.1",
     "rxjs": "^5.1.0",
     "semantic-ui": "^2.2.9",
